--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@tsconfig/svelte": "^5.0.6",
     "@types/chrome": "^0.1.31",
     "@types/node": "^25.0.3",
+    "lightningcss": "^1.31.1",
     "svelte": "^5.46.1",
     "svelte-check": "^4.3.4",
     "typescript": "~5.9.3",
-    "vite": "npm:rolldown-vite@7.3"
+    "vite": "npm:rolldown-vite@7.3.1"
   },
   "overrides": {
-    "vite": "npm:rolldown-vite@7.3"
+    "vite": "npm:rolldown-vite@7.3.1"
   }
 }
